manifest/deploy/prod/mainpage-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainpage
  namespace: grapycal
  labels:
    app: mainpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mainpage
  template:
    metadata:
      labels:
        app: mainpage
    spec:
      containers:
      - name: mainpage
        image: docker.io/grapycal/grapycal-mainpage:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
