manifest/deploy/prod/mainpage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainpage-service
  namespace: mainpage
  labels:
    app: mainpage
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: mainpage
